<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/teal_200"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/calculator" />

        <EditText
            android:id="@+id/etfirstValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/first"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etsecondValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/second"
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/finalAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/purple_500"
            android:padding=".3dp"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/purple_500"
            android:padding=".3dp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnmultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/purple_500"
            android:padding=".3dp"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btndivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/purple_500"
            android:padding=".3dp"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="Developed By Prakhar Singh"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>